--- a/servidor/pagina/templates/punto_venta.html
+++ b/servidor/pagina/templates/punto_venta.html
@@ -1,6 +1,6 @@
-{%extends 'Menu.html'%}
+{%extends 'cabecera.html'%}
 {% load static %}
-{%block cuerpo%}
+{%block cabecera%}
 <style>
     * {
         box-sizing: border-box;
@@ -41,69 +41,7 @@
         margin: 0;
     }
 </style>
-<button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
-</div>
-</div>
-<div id="main">
-    <nav class="navbar navbar-header navbar-expand navbar-light">
-        <a class="sidebar-toggler" href="#"><span class="navbar-toggler-icon"></span></a>
-        <button class="btn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav d-flex align-items-center navbar-light ml-auto">
-                <li class="dropdown nav-icon">
-                    <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
-                        <div class="d-lg-inline-block">
-                            <i data-feather="bell"></i>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-large">
-                        <h6 class='py-2 px-4'>Notifications</h6>
-                        <ul class="list-group rounded-none">
-                            <li class="list-group-item border-0 align-items-start">
-                                <div class="avatar bg-success mr-3">
-                                    <span class="avatar-content"><i data-feather="shopping-cart"></i></span>
-                                </div>
-                                <div>
-                                    <h6 class='text-bold'>New Order</h6>
-                                    <p class='text-xs'>
-                                        An order made by Ahmad Saugi for product Samsung Galaxy S69
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="dropdown nav-icon mr-2">
-                    <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
-                        <div class="d-lg-inline-block">
-                            <i data-feather="mail"></i>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                        <div class="avatar mr-1">
-                            <img src="{% static 'assets/images/avatar/avatar-1.jpg'%}" alt="" srcset="">
-                        </div>
-                        <div class="d-none d-md-block d-lg-inline-block">Hola, {{nombre_completo}}</div>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
+
     <form>
 
         <div class="clientept">
