--- a/servidor/pagina/templates/cargar_cliente.html
+++ b/servidor/pagina/templates/cargar_cliente.html
@@ -1,99 +1,114 @@
 {%extends 'cabecera.html'%}
 {% load static %}
 {%block cabecera%}
-    <form action="{% url 'editclientes' cliente_actual %}" method="POST">
-        {% csrf_token %}
-        <div class="forma">
-            <label for="ingresar-nombre">Numero de cedula</label>
-            <input type="text" class="form-control" id="formGroupExampleInput1" name="codigo_cliente" value="{{datos_act.codigo_cliente}}">
-  
-
-            <label for="ingresar-nombre">Nombre completo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_cliente" value="{{datos_act.nombre_cliente}}">
+<form action="{% url 'editclientes' cliente_actual %}" method="POST">
+    {% csrf_token %}
+    <div class="forma">
+        <label for="ingresar-nombre">Numero de cedula</label>
+        <input type="text" class="form-control" id="formGroupExampleInput1" name="codigo_cliente"
+            value="{{datos_act.codigo_cliente}}">
 
 
-            <label for="ingresar-codigo">Número de telefono</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" name="telefonos_cliente" value="{{datos_act.telefono_cliente}}">
+        <label for="ingresar-nombre">Nombre completo</label>
+        <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_cliente"
+            value="{{datos_act.nombre_cliente}}">
 
-            <label for="ingresar-precio-compra">Direccion</label>
-            <input type="text" class="form-control" id="formGroupExampleInput3" name="direccion_cliente" value="{{datos_act.direccion_cliente}}">
+
+        <label for="ingresar-codigo">Número de telefono</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" name="telefonos_cliente"
+            value="{{datos_act.telefono_cliente}}">
+
+        <label for="ingresar-precio-compra">Direccion</label>
+        <input type="text" class="form-control" id="formGroupExampleInput3" name="direccion_cliente"
+            value="{{datos_act.direccion_cliente}}">
+
+    </div>
+    <footer>
+
+        <div class="busqueda">
+            <div>
+                <label for="ingresar-nombre">Buscar cliente </label>
+                <input type="text" class="clienteptex" id="buscar"> <!-- ID de "buscar" para realizar busqueda-->
+            </div>
+        </div>
+        <div class="footer clearfix mb-0 text-muted">
+
+            <button class="guardar-producto" onclick="return confirm('Estas seguro que quieres guardar este usuario');"
+                type="submit">
+                Guardar cliente
+            </button>
 
         </div>
-        <footer>
-            
-                <div class="busqueda">
-                    <div>
-                        <label for="ingresar-nombre">Buscar cliente </label>
-                        <input type="text" class="clienteptex" id="buscar"> <!-- ID de "buscar" para realizar busqueda-->
-                    </div>
-                </div>
-                <div class="footer clearfix mb-0 text-muted">
-                    
-                        <button class="guardar-producto" onclick="return confirm('Estas seguro que quieres guardar este usuario');" type="submit">
-                            Guardar cliente
-                        </button>
 
-                </div>
-            
-        </footer>
-    </form>
-    <div class="card-body">
-        <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
-            <div class="dataTable-top">
-                <div class="dataTable-dropdown">
-                    <table class="table table-striped dataTable-table" id="tabla">
-                        <thead>
-                            <tr>
-                                <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                    class="dataTable-sorter">Cedula</a></th>
-                                <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                        class="dataTable-sorter">Nombre</a></th>
-                                <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                        class="dataTable-sorter">telefono</a></th>
-                                <th data-sortable="" style="width: 20.8988%;"><a href="#"
-                                        class="dataTable-sorter">direccion</a>
-                            </tr>
-                        </thead>
-
-                        {%for lista in listaclientes%}
+    </footer>
+</form>
+<div class="card-body">
+    <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
+        <div class="dataTable-top">
+            <div class="dataTable-dropdown">
+                <table class="table table-striped dataTable-table" id="tabla">
+                    <thead>
                         <tr>
-
-                            <td>{{lista.codigo_cliente}}</td>
-                            <td>{{lista.nombre_cliente}}</td>
-                            <td>{{lista.telefono_cliente}}</td>
-                            <td>{{lista.direccion_cliente}}</td>
-
-                            <td><th data-sortable="" style="width:11.125%;"><a href="{%url 'editclientes' lista.codigo_cliente%}"
-                                    class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
-                                    data-original-title="Editar usuario">
-                                    Editar
-                                </a></td>
-                            <td>
-                                <th data-sortable="" style="width:10.125%;"><a onclick="return confirm('Estas seguro que quieres borrar este usuario');" href="{%url 'borrarcliente' lista.codigo_cliente %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
-                                            
-                                    borrar
-                                </a></td>
-                            </td>    
-
-
-
-                                
+                            <th data-sortable="" style="width: 23.2012%;"><a href="#"
+                                    class="dataTable-sorter">Cedula</a></th>
+                            <th data-sortable="" style="width: 23.2012%;"><a href="#"
+                                    class="dataTable-sorter">Nombre</a></th>
+                            <th data-sortable="" style="width: 23.2012%;"><a href="#"
+                                    class="dataTable-sorter">telefono</a></th>
+                            <th data-sortable="" style="width: 20.8988%;"><a href="#"
+                                    class="dataTable-sorter">direccion</a></th>
+                            
                         </tr>
-                        {%endfor%}
-                    </table>
-                </div>
+                    </thead>
+
+                    {%for lista in listaclientes%}
+                    <tr>
+
+                        <td>{{lista.codigo_cliente}}</td>
+                        <td>{{lista.nombre_cliente}}</td>
+                        <td>{{lista.telefono_cliente}}</td>
+                        <td>{{lista.direccion_cliente}}</td>
+
+                        <td>
+                        <th data-sortable="" style="width:23.2012%;"><a
+                                href="{%url 'editclientes' lista.codigo_cliente%}"
+                                class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
+                                data-original-title="Editar usuario">
+                                
+                                <i class="fas fa-user-edit"></i>
+                                
+                            </a></td>
+                        <td>
+                        <th data-sortable="" style="width:23.2012%;"><a
+                                onclick="return confirm('Estas seguro que quieres borrar este usuario');"
+                                href="{%url 'borrarcliente' lista.codigo_cliente %}"
+                                class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
+                                data-original-title="Delete user">
+                               
+                                <i class="fas fa-user-minus"></i>
+                                
+                            </a></td>
+                            </td>
+
+
+
+
+                    </tr>
+                    {%endfor%}
+                </table>
             </div>
-            </body>
+        </div>
+        </body>
 
-            </html>
-            <script src="{% static 'assets/js/search.js' %}"></script> <!-- Script para busqueda-->
-            <script src="{% static 'assets/js/feather-icons/feather.min.js'%}"></script>
-            <script src="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js'%}"></script>
-            <script src="{% static 'assets/js/app.js'%}"></script>
-            <script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
-            <script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
-            <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
-           
+        </html>
+        <script src="{% static 'assets/js/search.js' %}"></script> <!-- Script para busqueda-->
+        <script src="{% static 'assets/js/feather-icons/feather.min.js'%}"></script>
+        <script src="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js'%}"></script>
+        <script src="{% static 'assets/js/app.js'%}"></script>
+        <script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
+        <script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
+        <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
 
-            <script src="{% static 'assets/js/main.js'%}"></script>
-            {%endblock%}
+
+        <script src="{% static 'assets/js/main.js'%}"></script>
+        {%endblock%}
